--- a/wp-content/themes/understrap-child/sass/theme/_post-preview.scss
+++ b/wp-content/themes/understrap-child/sass/theme/_post-preview.scss
@@ -28,7 +28,8 @@
 
         .card-body
         {
-            @extend .text-left;
+            //@extend .text-left;
+            text-align: left;
         }
     }
 
